--- a/src/app/pages/visualizar-agenda/agenda/modal-detalhe-atendimento/modal-detalhe-atendimento.component.html
+++ b/src/app/pages/visualizar-agenda/agenda/modal-detalhe-atendimento/modal-detalhe-atendimento.component.html
@@ -3,7 +3,7 @@
     <nb-card-body>
       <form id="form-associa-cartao" [formGroup]="formDetalheAtendimento">
         <div class="text-center">
-          <h5 class="text-center p-2">Agenda de Paciente</h5>
+          <h5 class="text-center p-2">Dados Paciente</h5>
           <div class="text-right mt-lg-n5">
             <button type="submit" class="btn btn-danger btn-sm" data-dismiss="modal" aria-label="Close"
               aria-hidden="true" (click)="close()">&times;</button>
@@ -21,11 +21,15 @@
                     </div>
                     <div class="form-row">
                       <div class="mr-2"><label>Paciente: </label></div>
-                      <label>{{atendimento.paciente}} </label>
+                      <label>{{atendimento.paciente}}  </label>
+                    </div>
+                    <div class="form-row">
+                      <div class="mr-2"><label>Responsável: </label></div>
+                      <label>{{atendimento.nomeResponsavel}}  </label>
                     </div>
                     <div class="form-row">
                       <div class="mr-2"><label>Data: </label></div>
-                      <label>{{atendimento.data}} </label>
+                      <label>{{atendimento.data}} - {{atendimento.horario}}</label>
                     </div>
                     <div *ngIf="atendimento.nameMother !== null" class="form-row">
                       <div class="mr-2"><label>Nome da mãe: </label></div>
@@ -58,45 +62,27 @@
             <nb-card>
               <nb-card-body>
                 <nb-actions size="small" fullWidth>
-                  <nb-action *ngIf="atendimento.status ==='01 - Aguardando Aprovação'
-                    || atendimento.status ==='03 - Consulta Confirmada'
-                    || atendimento.status ==='02 - Aguardando Pagamento'" (click)="abrirModalCancelamento()"
-                    title="Cancelar">
-                    <nb-icon class="action-icon" icon="trash-2-outline"></nb-icon>
-                  </nb-action>
-                  <nb-action
-                    *ngIf="atendimento.status ==='01 - Aguardando Aprovação' || atendimento.status ==='02 - Aguardando Pagamento'"
-                    (click)="aprovarPagamento()" title="Aprovar pagamento">
-                    <nb-icon class="action-icon" icon="checkmark-circle-outline"></nb-icon>
-                  </nb-action>
-                  <nb-action *ngIf="atendimento.status ==='03 - Consulta Confirmada'
-                    && atendimento.modalidade ==='Consulta por Video Chamada'
-                    && atendimento.urlCall !== null" (click)="goToLink(atendimento.urlCall)"
-                    title="Iniciar atendimento">
+                  <nb-action *ngIf="atendimento.status === '03 - Consulta Confirmada' && atendimento.modalidade === 'Consulta por Video Chamada' && atendimento.urlCall !== null"
+                             (click)="goToLink(atendimento.urlCall)" title="Iniciar atendimento">
                     <nb-icon class="action-icon" icon="wifi-outline"></nb-icon>
+                    <span class="action-label">Iniciar atendimento</span>
                   </nb-action>
-                  <!--<nb-action>
-                      <nb-icon class="action-icon" icon="archive-outline"></nb-icon>
-                      <span>Ver histórico</span>
-                    </nb-action>-->
-                  <nb-action *ngIf="(atendimento.status ==='01 - Aguardando Aprovação' || atendimento.status ==='03 - Consulta Confirmada'
-                    || atendimento.status ==='02 - Aguardando Pagamento') && atendimento.formaPagamento == 'PIX'"
-                    (click)="abrirComprovante()" title="Ver comprovante">
-                    <nb-icon class="action-icon" icon="attach-outline"></nb-icon>
-                  </nb-action>
+            
                   <nb-action
-                    *ngIf="atendimento.status ==='03 - Consulta Confirmada' || atendimento.status === '04 - Consulta Finalizada'"
-                    (click)="abrirConsulta()" title="Atualizar prontuário">
+                             (click)="abrirConsulta()" title="Atualizar prontuário">
                     <nb-icon class="action-icon" icon="file-outline"></nb-icon>
+                    <span class="action-label">Detalhes</span>
                   </nb-action>
-                  <nb-action
-                    *ngIf="atendimento.status ==='01 - Aguardando Aprovação' || atendimento.status ==='02 - Aguardando Pagamento' || atendimento.status ==='03 - Consulta Confirmada'"
-                    (click)="editarConsulta()" title="Reagendar">
-                    <nb-icon class="action-icon" icon="edit-outline"></nb-icon>
+
+                  <nb-action *ngIf="atendimento.status === '03 - Consulta Confirmada' && atendimento.modalidade === 'Consulta por Video Chamada' && atendimento.urlCall !== null"
+                  (click)="goToLink(atendimento.urlCall)" title="Iniciar atendimento">
+                    <nb-icon class="action-icon" icon="wifi-outline"></nb-icon>
+                    <span class="action-label">Iniciar atendimento</span>
                   </nb-action>
                 </nb-actions>
               </nb-card-body>
             </nb-card>
+            
           </div>
         </div>
       </form>
