--- a/src/app/pages/configurar-agenda/configurar-dia-atendimento/configurar-dia-atendimento.component.html
+++ b/src/app/pages/configurar-agenda/configurar-dia-atendimento/configurar-dia-atendimento.component.html
@@ -15,23 +15,42 @@
                     </div>
                   </nb-card-header>
                   <div class="form-group col-md-6">
-                    <h5 class="pt-3">Gerenciar Horário de Atendimento</h5>
+                    <h5 class="pt-3">Configurar Horários de Atendimento</h5>
                   </div>
                 </div>
                 <div class="form-row align-items-center">
-                  <div class="form-group col-md-7">
+                  <div class="form-group col-md-4">
                     <div class="form-group">
-                      <div class="mb-lg-n4">
-                        <label for="medico">Nome do médico: {{ this.doctor }}</label>
+                      <div class="div-medico">
+                        <label for="nome">Escolha o médico*</label>
+                        <select class="form-control" formControlName="medico"
+                        (change)="verificaMedico($event.target.value)">
+                          <option value="null" selected>SELECIONE</option>
+                          <option *ngFor="let medico of listMedico" value="{{ medico.id}}">{{
+                            medico.name}}</option>
+                        </select>
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="form-row align-items-center">
+
                   <div class="form-group col-md-3">
                     <div class="form-group">
                       <div class="div-medico">
-                        <label for="semana">Escolha o dia da semana*</label>
+                        <label for="clinica">Escolha a Clínica*</label>
+                        <select class="form-control" formControlName="clinica"
+                          (change)="verificaClinica($event.target.value)">
+                          <option value="null" selected>SELECIONE</option>
+                          <option *ngFor="let clinica of listClinica" value="{{ clinica.id }}">{{
+                            clinica.name}}</option>
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="form-group col-md-3">
+                    <div class="form-group">
+                      <div class="div-medico">
+                        <label for="semana">Escolha o Dia da Semana*</label>
                         <select class="form-control" formControlName="semana">
                           <option value="null" selected>SELECIONE</option>
                           <option *ngFor="let semana of listSemana" value="{{ semana.semana }}">{{
@@ -40,24 +59,12 @@
                       </div>
                     </div>
                   </div>
-                  <div class="form-group col-md-3">
-                    <div class="form-group">
-                      <div class="div-medico">
-                        <label for="clinica">Escolha a clínica*</label>
-                        <select class="form-control" formControlName="clinica"
-                          (change)="verificaClinica($event.target.value)">
-                          <option value="null" selected>SELECIONE</option>
-                          <option *ngFor="let clinica of listClinica" value="{{ clinica.id }}">{{
-                            clinica.socialName}}</option>
-                        </select>
-                      </div>
-                    </div>
-                  </div>
+
                 </div>
                 <div class="form-row align-items-center">
                   <div class="form-group col-md-6">
                     <div class="form-group">
-                      <label for="tipo-modalidade">Tipo modalidade</label>
+                      <label for="tipo-modalidade">Escolha as Modalidade de Atendimento</label>
                     </div>
                   </div>
                 </div>
@@ -125,21 +132,54 @@
                         <button class="btn btn-primary mr-3" (click)="addHora()">
                           Incluir +
                         </button>
-                        <button class="btn btn-success" (click)="salvar(formDiaAtendimento.value)">
-                          Salvar
-                        </button>
                       </div>
                     </div>
                   </div>
                 </div>
-                <div class="form-row align-items-center">
-                  <div class="form-group col-md-12">
-                    <div class="title">
-                      Informa a sua data de Início e Fim de Atendimento, caso atenda em mais de um horário adicione mais
-                      de uma faixa de horários.
+
+                  <nb-card-body>
+                    <section class="align-items-center">
+                      <div class="col-md-12 col-xs-12">
+                        <form #card="ngForm">
+                          <div class="form-row align-items-center">
+                            <section class="border-dark m-3 btn mt-lg-n4 paragraph-2 mb-5" style="background-color: white;"
+                              *ngFor="let card of tipoCard; let i = index;">
+                              <div class="col-md-12 col-xs-12">
+                                <div class="row">
+                                  <div class="col-md-12">
+                                    <label for="horaInicio">Hora de Início</label>
+                                    <i class="fa fa-window-close alert-danger carousel-item-next" aria-hidden="true"
+                                      (click)="removerCard()"></i>
+                                    <div class="row pl-3">
+                                      <input type="time" name="appt" required [(ngModel)]="card.horaInicio" />
+                                    </div>
+                                    <label for="horaFim">Hora de Término</label> 
+                                    <div class="row pl-3">
+                                      <input type="time" name="appt" required [(ngModel)]="card.horaFim" />
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </section>
+                          </div>
+                        </form>
+                      </div>
+                    </section>
+                  </nb-card-body>
+
+                  <div class="form-row align-items-center" *ngIf="mostrarDiv">
+                    <div class="col-md-12">
+                      <div class="form-group pt-2">
+                        <div class="text-right">
+                          <button class="btn btn-success" (click)="salvar(formDiaAtendimento.value)">
+                            Salvar
+                          </button>
+                        </div>
+                      </div>
                     </div>
                   </div>
-                </div>
+                
+<!--
                 <div class="form-row align-items-center">
                   <nb-card-body>
                     <section class="align-items-center">
@@ -172,107 +212,11 @@
                       </div>
                     </section>
                   </nb-card-body>
-                </div>
-                <div class="form-row align-items-center">
-                  <div class="form-group col-md-12">
-                    <div class="app-box">
-                      <ngx-datatable #myTable class="bootstrap" [rows]="rowData" [columnMode]="'force'"
-                        [headerHeight]="35" [footerHeight]="50" [rowHeight]="'auto'"
-                        [messages]="{emptyMessage: 'Sem dados...'}" [limit]="8">
-
-                        <ngx-datatable-column name="Segunda" prop="segunda">
-                          <ng-template ngx-datatable-cell-template let-row="row">
-                            <div class="text-center">
-                              {{ row.segunda }}
-                            </div>
-                          </ng-template>
-                        </ngx-datatable-column>
-                        <ngx-datatable-column name="Terça" prop="terca">
-                          <ng-template ngx-datatable-cell-template let-row="row">
-                            <div class="text-center">
-                              {{ row.terca }}
-                            </div>
-                          </ng-template>
-                        </ngx-datatable-column>
-                        <ngx-datatable-column name="Quarta" prop="quarta">
-                          <ng-template ngx-datatable-cell-template let-row="row">
-                            <div class="text-center">
-                              {{ row.quarta }}
-                            </div>
-                          </ng-template>
-                        </ngx-datatable-column>
-                        <ngx-datatable-column name="Quinta" prop="quinta">
-                          <ng-template ngx-datatable-cell-template let-row="row">
-                            <div class="text-center">
-                              {{ row.quinta }}
-                            </div>
-                          </ng-template>
-                        </ngx-datatable-column>
-                        <ngx-datatable-column name="Sexta" prop="sexta">
-                          <ng-template ngx-datatable-cell-template let-row="row">
-                            <div class="text-center">
-                              {{ row.sexta }}
-                            </div>
-                          </ng-template>
-                        </ngx-datatable-column>
-                        <ngx-datatable-column name="Sabado" prop="sabado">
-                          <ng-template ngx-datatable-cell-template let-row="row">
-                            <div class="text-center">
-                              {{ row.sabado }}
-                            </div>
-                          </ng-template>
-                        </ngx-datatable-column>
-                        <ngx-datatable-column name="Domingo" prop="domingo">
-                          <ng-template ngx-datatable-cell-template let-row="row">
-                            <div class="text-center">
-                              {{ row.domingo }}
-                            </div>
-                          </ng-template>
-                        </ngx-datatable-column>
-                        <ngx-datatable-column [sortable]="false" name="Ações" [canAutoResize]="true">
-                          <ng-template ngx-datatable-cell-template let-row="row">
-                            <a class="home-icon" (click)="excluir(row)" title="Excluir">
-                              <i class="fas fa-solid fa-ban p-2"></i>
-                            </a>
-                          </ng-template>
-                        </ngx-datatable-column>
-                        <ngx-datatable-footer>
-                          <ng-template ngx-datatable-footer-template let-rowCount="rowCount" let-pageSize="pageSize"
-                            let-selectedCount="selectedCount" let-curPage="curPage" let-offset="offset">
-                            <div>
-                              <div class="page-count">
-                                Total de Registros: {{rowCount}}
-                              </div>
-                            </div>
-                            <datatable-pager [pagerLeftArrowIcon]="'fa fa-angle-double-left'"
-                              [pagerRightArrowIcon]="'fa fa-angle-double-right '"
-                              [pagerPreviousIcon]="'fa fa-angle-left'" [pagerNextIcon]="'fa fa-angle-right '"
-                              [page]="curPage" [size]="pageSize" [count]="rowCount"
-                              [hidden]="!((rowCount / pageSize) > 1)" (change)="myTable.onFooterPage($event)">
-                            </datatable-pager>
-                          </ng-template>
-                        </ngx-datatable-footer>
-                      </ngx-datatable>
-                    </div>
-                  </div>
-                </div>
+                </div>-->
               </div>
             </form>
           </nb-card-body>
         </nb-card>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div #card>
-  <div class="col-md-12 col-xs-12">
-    <div class="row" *ngIf="isActive" class="loader">
-      <div class="text-center" style="margin-top: -360px;">
-        <button class="btn btn-primary" type="button" disabled>
-          <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-          Carregando...
-        </button>
       </div>
     </div>
   </div>
