--- a/src/app/pages/gestao-paciente/dependente/dependente.component.html
+++ b/src/app/pages/gestao-paciente/dependente/dependente.component.html
@@ -15,24 +15,31 @@
                     </div>
                   </nb-card-header>
                   <div class="form-group col-md-3">
-                    <h5 class="pt-3">Incluir novos Dependente</h5>
+                    <h5 class="pt-3">Incluir Novos Dependente</h5>
                   </div>
                 </div>
+               
                 <div class="form-row align-items-center">
                   <h6 class="p-1">Dados do Responsável:</h6>
-                </div>
-                
-                <div class="col-md-12">
+                </div>                       
+
+
+                  <div class="col-md-12">
+
                   <div class="form-row align-items-center">
-                    <p class="card-text mb-0">Nome Responsável: {{ NewowData.name }}</p>
-                    <p class="card-text mb-0">Telefone: {{ NewowData.cellPhone }}</p>
-                    <p class="card-text mb-0">Email: {{ NewowData.email }}</p>
-                    <p class="card-text mb-0">CPF: {{ NewowData.federalId }}</p>
+                    <p class="card-text mb-0"><strong>Nome Responsável:</strong> {{ NewowData.name }}</p>
+                  </div>
+                  <div class="form-row align-items-center">
+                    <p class="card-text mb-0"><strong>Telefone:</strong> {{ NewowData.cellPhone }}</p>
+                  </div>
+                  <div class="form-row align-items-center">
+                    <p class="card-text mb-0"><strong>Email:</strong> {{ NewowData.email }}</p>
+                  </div>
+                  <div class="form-row align-items-center">
+                    <p class="card-text mb-0"><strong>CPF:</strong> {{ NewowData.federalId }}</p>
                   </div>
                 </div>
-                
-                
-
+                            
                 <div class="form-row align-items-center">
                   <h6 class="p-1">Dados do Dependente:</h6>
                 </div>                       
@@ -107,87 +114,53 @@
                   </div>
                 </nb-card-header>
                 <div class="form-group col-md-3">
-                  <h5 class="pt-3">Visualizar Dependente</h5>
+                  <h5 class="pt-3">Visualizar Dependentes</h5>
                 </div>
               </div>
               <div class="form-row align-items-center">
                 <div class="form-group col-md-6">
-                  <label for="tipoSanguineo">Nome: {{ this.nameMae }}</label>
+                  <label for="tipoSanguineo">Nome Responsável: {{ this.nameMae }}</label>
                 </div>
-              </div>
-              <div class="form-row align-items-center">
-
-                <div class="form-group col-md-12">
-                  <div class="app-box">
-                    <ngx-datatable #myTable class="bootstrap" [rows]="rowData" [columnMode]="'force'"
-                      [headerHeight]="35" [footerHeight]="50" [rowHeight]="'auto'"
-                      [messages]="{emptyMessage: 'Sem dados...'}" [limit]="10">
-
-                      <ngx-datatable-column name="Nome" prop="name">
-                        <ng-template ngx-datatable-cell-template let-row="row">
-                          <div class="text-left">
-                            {{ row.name }}
-                          </div>
-                        </ng-template>
-                      </ngx-datatable-column>
-                      <ngx-datatable-column name="Data nascimento" prop="birthDate">
-                        <ng-template ngx-datatable-cell-template let-row="row">
-                          <div class="text-center">
-                            {{ row.birthDate }}
-                          </div>
-                        </ng-template>
-                      </ngx-datatable-column>
-                      <ngx-datatable-column name="CPF" prop="cpf">
-                        <ng-template ngx-datatable-cell-template let-row="row">
-                          <div class="text-center">
-                            {{ row.federalId }}
-                          </div>
-                        </ng-template>
-                      </ngx-datatable-column>
-                      <ngx-datatable-column name="Status" prop="status">
-                        <ng-template ngx-datatable-cell-template let-row="row">
-                          <div class="text-center">
-                            {{ row.status }}
-                          </div>
-                        </ng-template>
-                      </ngx-datatable-column>
-                      <ngx-datatable-footer>
-                        <ng-template ngx-datatable-footer-template let-rowCount="rowCount" let-pageSize="pageSize"
-                          let-selectedCount="selectedCount" let-curPage="curPage" let-offset="offset">
-                          <div>
-                            <div class="page-count">
-                              Total de Registros: {{rowCount}}
-                            </div>
-                          </div>
-                          <datatable-pager [pagerLeftArrowIcon]="'fa fa-angle-double-left'"
-                            [pagerRightArrowIcon]="'fa fa-angle-double-right '" [pagerPreviousIcon]="'fa fa-angle-left'"
-                            [pagerNextIcon]="'fa fa-angle-right '" [page]="curPage" [size]="pageSize" [count]="rowCount"
-                            [hidden]="!((rowCount / pageSize) > 1)" (change)="myTable.onFooterPage($event)">
-                          </datatable-pager>
-                        </ng-template>
-                      </ngx-datatable-footer>
-                    </ngx-datatable>
-                  </div>
-                </div>
-
               </div>
             </div>
 
+            <div class="form-row align-items-center">
+              <div class="form-group col-md-12">
+                <div class="app-box">
+                  <div class="row">
+                    <div class="col-md-4" *ngFor="let row of rowData">
+                      <nb-card>
+                        <nb-card-body>
+                          <div class="text-center">
+                            <img src="{{row.avatar}}" style="height: 55px; border-radius: 50%;">
+                          </div>
+                          <p class="card-text">Paciente: {{ row?.nameChild || row.name }}</p>
+                          <p class="card-text" *ngIf="row?.nameChild && row?.name">Nome Paciente: {{ row?.name }}</p>
+                          <p class="card-text">Telefone: {{ row.cellPhone }}</p>
+                          <p class="card-text">Email: {{ row.email }}</p>
+                          <p class="card-text">Nome da Mãe: {{ row.nameMother }}</p>
+                          <p class="card-text">Nome do Pai: {{ row.nameFather }}</p>
+                          <p class="card-text">Sexo: {{ row.biologicalSex }}</p>
+                          <p class="card-text">Data Cadastro: {{ row.dateRegister }}</p>
+                          <p class="card-text">Data de Nascimento: {{ row.birthDate }}</p>
+                          <p class="card-text">Tipo do Sangue: {{ row.bloodType }}</p>
+              
+                          <div class="datatable-body-box-actions">
+                            <button class="btn edit-icon pt-4" (click)="cadastrar(row)" title="Editar Cadastro">
+                              <i class="fas fa-pencil-alt" aria-label="Editar Cadastro"></i>
+                            </button>
+                          </div>
+                        </nb-card-body>
+                      </nb-card>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              
+          </div>
+
           </nb-card-body>
         </nb-card>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div #card>
-  <div class="col-md-12 col-xs-12">
-    <div class="row" *ngIf="isActive" class="loader">
-      <div class="text-center" style="margin-top: -360px;margin-right: 40px;">
-        <button class="btn btn-primary" type="button" disabled>
-          <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-          Carregando...
-        </button>
       </div>
     </div>
   </div>
